<resources>
    <string name="app_name">ArtWatch</string>
    <string name="search">Search</string>
    <string name="rights">Rights</string>
    <string name="reportIncident">Report\nIncident</string>
    <string name="moreInfo">Important\nInformation</string>
    <string name="artists">Artists</string>
    <string name="organisations"><![CDATA[Organisations\n&\nInstitutions]]></string>
    <string name="help">Help</string>
    <string name="ok">OK</string>
    <string name="successfulReg">You have been registered successfully</string>
    <string name="completed">Your information has been successfully submitted</string>
    <string name="team">Team</string>
    <string name="fillIn">*please fill in all the fields on the form below</string>
    <string name="fillInAbove">*please fill in all the fields on the form above</string>
    <string name="cancel">Cancel</string>
    <string name="about">General Information</string>
    <string name="countryOfResidence">Country Of Residence</string>
    <string name="countryOfOrigin">Country Of Origin</string>
    <string name="contacts">Contact Information</string>
    <string name="edit">Edit Profile</string>
    <string name="emergency">are you having an emergency? Please send us an SOS by</string>
    <string name="notEmergency">is your emergency not that urgent?</string>
    <string name="messageBtn">contact us by clicking the message button</string>
    <string name="tapping">tapping the button below</string>
    <string name="lawyer">Lawyer</string>
    <string name="sos">SOS</string>
    <string name="lawyerReg">Laywers\' Registration</string>
    <string name="profession">Hi, what is your profession?</string>
    <string name="rightsDetails">When logging an incident we require the truth that the person responsible for this small in Creative and clear on the reason as change Three definition of the forth coming.
The indignations of true artistry behind the to Definition of the real legends and the times\nTo come and the changes that we crave for But the things will only get better when the Miles taken are for the baby steps and the.
Change is coming ans its here for all the new
And the only industry people to change how
We connect and how we evolve pushing the
Grounded minds together and the more come
From.
When logging an incident we require some to
that the person responsible for this with true
Creative and clear on the reason as the follow</string>
    <string name="ugandarights">When logging an incident we require the truth
that the person responsible for this small in
Creative and clear on the reason as change
Three definition of the forth coming.
The indignations of true artistry behind the to
Definition of the real legends and the \n
\n
To come and the changes that we crave for
But the things will only get better when the
Miles taken are for the baby steps and the.
Change is coming ans its here for all the new
And the only industry people to change how
We connect and how we evolve pushing the
Grounded minds together and the more come
From.</string>
    <string name="general">General</string>
    <string name="country">Country</string>
    <string name="individualrights">Individual Rights</string>
    <string name="incident">Report an Incident</string>
    <string name="severity">SEVERITY</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="typeamessage">Please describe your artistic work and your current situation, including threats to your artistic freedom</string>
    <string name="submit">SUBMIT</string>
    <string name="howto">How to report an incident</string>
    <string name="incidenttext">When logging an incident we require that the person responsible for this Creative and clear on the reason as</string>
    <string name="results">Results</string>
    <string name="uganda">Uganda</string>
    <string name="kenya">Kenya</string>
    <string name="Rwanda">Rwanda</string>
    <string name="tanzania">Tanzania</string>
    <string name="burundi">Burundi</string>
    <string name="aron">Xibit Aron</string>
    <string name="artistDetails">Aron is a an artist from Uganda, Aron is a an artist from Uganda, Aron is a an artist from Uganda Aron is a an artist from Uganda</string>
    <string name="nkwanzi">Nkwanzi Group</string>
    <string name="groupDetails">Nkwanzi is a an transitional arts form from Uganda that was created in</string>
    <string name="organisation">Organisations</string>
    <string name="activities">Activities</string>
    <string name="rightsInUganda">Rights in %1$s</string>
    <string name="rightsInUg">When logging an incident we require the truth
that the person responsible for this small in
Creative and clear on the reason as change
Three definition of the forth coming.
The indignations of true artistry behind the to
Definition of the real legends and the times
\n\n
To come and the changes that we crave for
But the things will only get better when the
Miles taken are for the baby steps and the.\n\n
Change is coming ans its here for all the new
And the only industry people to change how
We connect and how we evolve pushing the
Grounded minds together and the more come
From.
</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="hello">Hello! Welcome</string>
    <string name="name">Sophia</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="confirmPassword">Confrim Password</string>
    <string name="home">Home</string>
    <string name="HelloArtist">Good Morning Rxdn3y</string>
    <string name="email">Email Address</string>
    <string name="firstName">First Name</string>
    <string name="middleName">Middle Name</string>
    <string name="lastName">Last Name</string>
    <string name="DOB">Date of Birth</string>
    <string name="phonenumber">Phone Number</string>
    <string name="altPhoneNumber">Alternative Phone Number (Optional)</string>
    <string name="Address">Address</string>
    <string name="NOK">"Next Of Kin "</string>
    <string name="NOKPhone">Next Of Kin Phone Number</string>
    <string name="Register">Register</string>
    <string name="artistsRegistration">Artists\' Registration</string>
    <string name="Login">Login</string>
    <string name="dpActionTitle">Please choose an Action</string>
    <string name="fullname">Name</string>
    <string name="location">Location</string>
    <string name="bestWay">Other means of contact (*optional)</string>
    <string name="FAQs">FAQs \n&amp; \nPrivacy Policy</string>
    <string name="FnP">FAQs &amp; Privacy Policy</string>
    <string name="legalAid">Legal \nAid</string>
    <string name="legalAids">Legal Aid</string>
    <string name="members">Members</string>
    <string name="ssn">Social Number</string>
    <string name="company">Company Name</string>
    <string name="contact">Contact</string>
    <string name="artWatch">Art Watch</string>
    <string name="hi">Hi</string>
    <string name="artist">Artist</string>
    <string name="information">Information</string>
    <string name="description">Description Of your Work and the major risk</string>
    <string name="supportPartners">Support \nPartners</string>
    <string name="supportPtnrs">Support Partners</string>
    <string-array name="countries">
        <item>Select Country</item>
        <item>Uganda</item>
        <item>Kenya</item>
        <item>Tanzania</item>
        <item>Rwanda</item>
        <item>Burundi</item>
    </string-array>
    <string-array name="categories">
        <item>Select Category</item>
        <item>Artist</item>
        <item>Lawyer</item>
        <item>Journalist</item>
        <item>Manager</item>
    </string-array>
    <string-array name="bestContact">
        <item>Best way to reach you</item>
        <item>Phone</item>
        <item>Email</item>
        <item>Other</item>
    </string-array>
    <string-array name="riskLevel">
        <item>Please select Incident urgency</item>
        <item>High</item>
        <item>Moderate</item>
        <item>Low</item>
    </string-array>
    <string-array name="dpActions">
        <item>Take Photo</item>
        <item>Select From Gallery</item>
        <item>Remove Picture</item>
        <item>Cancel</item>
    </string-array>
    <string name="title_home">Home</string>
    <string name="info">Info</string>
    <string name="profile">Profile</string>
    <string name="feedback">Feedback</string>
</resources>