<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="104dp"
        android:layout_height="100dp"
        android:id="@+id/airtimeCard"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/airtimeIcon"
                android:src="@drawable/uganda"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/khand_medium"
                android:text="@string/uganda"
                android:id="@+id/airtimeDesc"
                android:layout_margin="5dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/orange"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="104dp"
        android:layout_height="100dp"
        android:id="@+id/dstvCard"
        android:onClick="dstvOnClick"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/DsTvIcon"
                android:src="@drawable/kenya"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/khand_medium"
                android:text="@string/kenya"
                android:id="@+id/DsTvDesc"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="104dp"
        android:layout_height="100dp"
        android:id="@+id/goTvCard"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/GoTvIcon"
                android:src="@drawable/tanzania"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/khand_medium"
                android:text="@string/tanzania"
                android:id="@+id/GoTvDesc"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="104dp"
        android:layout_height="100dp"
        android:id="@+id/nwscCard"
        android:onClick="nwscOnClick"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/NWSCIcon"
                android:src="@drawable/rwanda"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/khand_medium"
                android:text="@string/Rwanda"
                android:id="@+id/NWSCDesc"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="104dp"
        android:layout_height="100dp"
        android:id="@+id/starTimesCard"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/StartTimesIcon"
                android:src="@drawable/burundi"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/khand_medium"
                android:text="@string/burundi"
                android:id="@+id/StartTimesDesc"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>